--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,6 @@
 <head>
   <title>You Should Quit Your Job</title>
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700,900|Quicksand:400,700" rel="stylesheet">
 </head>
 
 <body>
