--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,7 @@
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>You Should Quit Your Job</title>
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700,900|Quicksand:400,700" rel="stylesheet">
 </head>
