--- a/client/main.html
+++ b/client/main.html
@@ -3,7 +3,8 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>You Should Quit Your Job</title>
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700,900|Quicksand:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Cardo:400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Chivo:300,400,700,900" rel="stylesheet">
 </head>
 
 <body>
